<resources>
    <string name="app_name">FantasyDraft</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fixtures_label">fragment_fixtures</string>
    <string name="text_label_1">Fixtures</string>
    <string name="text_label_2">Draft</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fixtures">Fixtures</string>
    <string name="show_all">Show all</string>
    <string name="first_tour">First Tour</string>
    <string name="second_tour">Second tour</string>
    <string name="connection_error">Connection Error</string>
    <string name="loading">Loading..</string>
    <string name="schedule">Schedule</string>
    <string name="gameweek">GameWeek $d</string>
    <string name="empty_state">Something went wrong. Try later</string>
    <string name="sign_in">Sign In</string>
    <string name="register">I need to register</string>
    <string name="upl">Ukrainian Premier League</string>
    <string name="welcome_to_fantasy">Welcome to Fantasy</string>
    <string name="first_name">First Name</string>
    <string name="required">*Required</string>
    <string name="name_request">Please enter your first name!</string>
    <string name="last_name">Last Name</string>
    <string name="lastName_request">Please enter your last name!</string>
    <string name="email_address">Email Address</string>
    <string name="email_request">Please enter your e-mail address!</string>
    <string name="confirmation">We will send you a confirmation email to this address</string>
    <string name="password">Password</string>
    <string name="pass_requirements">Password must be at least 8 characters long</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unspecified">Unspecified</string>
    <string name="date">Date of Birth</string>
    <string name="to_regist">Register</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password_hint">Your password</string>
    <string name="dd">DD</string>
    <string name="slash">/</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
</resources>